[package]
name = "fstat"
version = "0.1.0"
authors = ["u92314lp <laurent.pool@student.manchester.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), target_os = "hermit"))'.dependencies]
hermit-sys = { path = "../../hermit-sys", default-features = false, features = ["with_submodule"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false

[profile.dev]
opt-level = 1      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-C debuginfo`
                   # a value of `true` is equivalent to `2`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false         # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled












